--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Presiones</title>
   </head>
   <body>
+    <div id="developed">developed by:</div>
+    <div id="eder">eder_3232</div>
+
     <div id="mca">
       <input type="number" placeholder="mca..." />
     </div>
